src/test/deca/context/invalid/langage_sans_objet/regles_communes/regle_0_1.deca
{
    a = 1;
}

// raison : opération partielle
// "Identificateur non déclaré"
